reparando errores de hover de la parte de servicio de la mineria

--- a/css/style.styl
+++ b/css/style.styl
@@ -737,6 +737,7 @@ footer
 		margin-top 50px
 		margin-bottom 50px
 		position relative
+		width: 100%
 	a#mas
 		background-color #006AA9
 		width 80px
